feat. 랜딩페이지 로백스 카카오맵

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=76fdca4cce71e26c0faf5aa439280c10&autoload=false"
+    ></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
