feat. 구성원상세 업무분야

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=76fdca4cce71e26c0faf5aa439280c10&autoload=false"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%&autoload=false"
     ></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
